public/boss/styles.css
/* ... */
button.primary:hover {
  background-color: #000;
  color: #fff;
}
button.primary:hover img {
  filter: invert(100%);
}

button.primary:disabled {
  border: 1px solid #c0c0c0;
  color: #c0c0c0;
}
button.primary:disabled img {
  filter: invert(50%);
}

button.primary:disabled:hover {
  background-color: #fff;
}

/* Secondary: Thinner and smaller then primary button. */

button.secondary {
  border: 1px solid #000;
  border-radius: 4px;
  height: 14px;
  color: #000;
  background-color: #fff;
  font-family: "ChicagoFLF";
  font-size: 9px;
  padding: 0px 16px 0px 16px;
}

button.secondary:hover {
  background-color: #000;
  color: #fff;
}

button.secondary:disabled {
  border: 1px solid #c0c0c0;
  color: #c0c0c0;
}
::file-selector-button:disabled {
  border: 1px solid #c0c0c0;
  color: #c0c0c0;
}

button.secondary:disabled:hover {
  background-color: #fff;
  color: #c0c0c0;
}
::file-selector-button:disabled:hover {
  background-color: #fff;
  color: #c0c0c0;
}

button.secondary.add-left-margin {
  margin-left: 5px;
}

/** Image button **/
button.image {
  border: none;
  background-color: #fff;
}

/* NOTE: Even though the file select is the same type of button as secondary, I
 * had to style it separately as it was interfering with secondary disabled
 * states */
::file-selector-button {
  border: 1px solid #000;
  border-radius: 4px;
  height: 14px;
  color: #000;
  background-color: #fff;
  font-family: "ChicagoFLF";
  font-size: 9px;
  padding: 0px 16px 0px 16px;
}
::file-selector-button:hover {
  background-color: #000;
  color: #fff;
}

/**
 * Controls provide a way for buttons to be grouped in a logical way.
 *
 * They may be displayed on the bottom, or to the right.
 *
 * Forms must have the controls on the bottom. Lists must have the
 * controls on the right.
 */
.controls {
  display: flex;
  justify-content: flex-end;
  gap: 10px;
  align-items: center;
}


/**
 * Before, the controls on the right were sized using `vbox` and CSS size.
 *
 * This is a new pattern that allows controls to be part of a proportionally
 * sized container w/ a fixed width.
 *
 * Using the new proportionally sized model allows controls to share the same
 * size across all contexts. This also simplifies the visual language.
 */
.controls-right {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  gap: 10px;
  /* The default location for controls is the bottom. When controls are
   *`separated`, it indicates that there will be a top&bottom group of buttons.
   * Use the `separated` style in this context.
   */
  justify-content: flex-end;

  flex: 0 0 140px;
}
/* Allows controls to be grouped on top and bottom. This should override
 * the default flex-end justification. FIXME: test this */
.controls-right.separated {
  justify-content: space-between;
}
.controls-right.thin {
  flex: 0 0 100px;
}

/**
 * In rare contexts, the `controls-center` provides a way to
 * center the controls, rather than display them on the right.
 * Please use io.bithead.wordy as an example.
 */

.controls-center {
  display: flex;
  justify-content: center;
  gap: 10px;
  align-items: center;
}

/** Inputs **/

textarea,
input[type=text], input[type=password], input[type=email] {
  border: 1px solid #000;
  height: 24px;
  width: 100%;
  font-family: "Geneva";
  font-size: 12px;
}

/* Radio */

input[type=radio] {
  border: 1px solid #000;
  height: 12px;
  width: 12px;
  transform: translateY(2px);
  /* Not supported in older browsers. I'm not about to use the crazy hacks to make it work in all browsers. */
  accent-color: #000;
}

input[type=checkbox] {
  border: 1px solid #000;
  border-radius: 0px;
  height: 12px;
  width: 12px;
  transform: translate(1px, 1px);
  /* Not supported in older browsers. I'm not about to use the crazy hacks to make it work in all browsers. */
  accent-color: #000;
  /* FIXME: It's possible to change the checkbox shape. It requires hiding the checkbox and drawing a new one using `before`. */
}

/* Pop-up & UI Menu (select) */

/* The size of the `select` is expected to be 140px */
.align-vertically {
  display: flex;
  gap: 165px;
  justify-content: flex-start;
}

/* Contains all `ui-menu`s for a respective application. */
.ui-menus {
  position: relative;
  display: flex;
}

.ui-menu {
  position: relative;
  cursor: pointer;
}
.ui-popup-menu {
  display: flex;
  cursor: pointer;
}
.ui-menu {
  flex: 0 1 auto;
}

.ui-menu select,
.ui-popup-menu select {
  display: none; /* Hide original select element */
}

.ui-popup-menu label {
  margin-top: 6px;
  margin-right: 5px;
  font-size: 14px;
  /* This value may need to be configurable */
  width: 90px;
}

/**
 * The containers contain the label and the options for the select.
 *
 * In order for the content of the menu to display over other content, it must
 * be positioned absolutely inside another container that it is positioned
 * relative to.
 */
.ui-menu-container,
.ui-popup-container {
  font-family: "ChicagoFLF";
  font-size: 12px;
}
.ui-menu-container {
  position: relative;
}
.ui-popup-container {
  position: relative;
  border: 1px solid #000;
  box-shadow: 1px 1px 0px 0px #000;
}
.disabled .ui-popup-container {
  border: 1px solid #aaa;
}

/* The menu label. This is the first option in select. */
.ui-menu-label {
  width: fit-content;
  padding: 2px 10px 2px 10px;
}
.ui-popup-label { }

.ui-menu-label.ui-popup-arrow-active {
  background-color: #000;
  color: #fff;
}
.ui-menu .sub-container {
  position: absolute;
  left: 0px;
  top: 17px;
  border: 1px solid #000;
  box-shadow: 1px 1px 0px 0px #000;
}

/* Point arrow down by default */
.ui-popup-label:after {
  position: absolute;
  content: "";
  top: 10px;
  right: 10px;
  width: 0px;
  height: 0px;
  border: 5px solid transparent;
  border-color: #000 transparent transparent transparent;
}
.disabled .ui-popup-label:after {
  border-color: #ddd transparent transparent transparent;
}
/* ... */

